. [NEW] TileMap: rotated tiles are supported
. [NEW] Tests:
        ActionTest: added test case for issue #1020, synchronizing of several animations each within a CCRepeatForever
        DirectorTest: test case for demonstrating runLoopCommon with a scroll view
        ParticleTest: added test case for issue #893, free non-moving particles in retina mode would still move
. [NEW] Templates: chipmunk template updated to demonstrate working of CCPhysicsSprite and CCPhysicsDebugNode
. [NEW] Touches: touches still work when UIKit elements lay on top of cocos view
. [FIX] Animation:
        bug in addFrames that resulted in incorrect delayPerUnit (issue #1341), added assert to prevent 0 duration.
        changing delayPerUnit also updates duration
. [FIX] Actions:
        CCAnimate: fixed low FPS bug, where multiple frames need to be set per 'tick'.
        CCActionTween:
            fixed missing copyWithZone
             uses keyPath instead of key internally for greater flexibility (issue #1082)
        CCRepeatForever: has a stop method now (issue #945)
. [FIX] ColorLayer: color and opacity are readwrite (issue #1246)
. [FIX] Director:
        exceptions raised in runloop didn't cause program to abort (issue #911)
        Only enable depth test when a depth buffer is present
        fixed end method, complete shutdown of director and resources (issue #686)
. [FIX] EAGLView: resizing only occurs when necessary (refix of issue #1153)        
. [FIX] FileUtils: also search full bundle path
        iPad falls back to iPad suffix if iPad-hd isn't found, instead of iPhone
. [FIX] Menu: 
        CCMenuItemToggle, tags of children were modified by the component
        Blocks invocation of menu items failed on iOS6, added workaround
. [FIX] Node:
        onEnterTransitionDidFinish isn't called twice anymore, when node was added in onEnter
        touches still work when UIKit elements lay on top of cocos view
. [FIX] Sprite: