@@ -10,6 +10,9 @@
 #import "cocos2d.h"
 #import "HelloWorldScene.h"
 
+//to support both landscape and portrait, apple recommends using two viewcontrollers
+//http://developer.apple.com/library/ios/#featuredarticles/ViewControllerPGforiPhoneOS/RespondingtoDeviceOrientationChanges/RespondingtoDeviceOrientationChanges.html#//apple_ref/doc/uid/TP40007457-CH7-SW1
+//this example shows how to start-up the app succesfully in landscape modes, while still supporting portrait. 
 
 @implementation bugViewController
 
@@ -19,31 +22,39 @@
 }
 */
 
-/*
-// Implement viewDidLoad to do additional setup after loading the view, typically from a nib.
 
+// Implement viewDidLoad to do additional setup after loading the view, typically from a nib.
+/*
 - (void)viewDidLoad {
 
     [super viewDidLoad];
 }
 */
 
-- (void) viewDidAppear:(BOOL)animated
+- (void) loadView
 {
-    firstTime_ = NO;
-    [super viewDidAppear:animated];
+    EAGLView *glView = [EAGLView viewWithFrame:[[UIScreen mainScreen] bounds]
+								   pixelFormat:kEAGLColorFormatRGBA8
+								   depthFormat:GL_DEPTH_COMPONENT24_OES
+							preserveBackbuffer:NO
+									sharegroup:nil
+								 multiSampling:NO
+							   numberOfSamples:0];
+    self.view = glView;
+    firstTime_ = YES;
+    [[NSNotificationCenter defaultCenter] addObserver:self selector:@selector(disableFirstTime) name:@"sceneStarted" object:nil];
 }
 
-- (void) viewWillAppear:(BOOL)animated
+- (void) disableFirstTime
 {
-    firstTime_ = YES;
-    [super viewWillAppear:animated];
+    firstTime_ = NO;
+    [[NSNotificationCenter defaultCenter] removeObserver:self name:@"sceneStarted" object:nil];
 }
 
 // Override to allow orientations other than the default portrait orientation.
 - (BOOL)shouldAutorotateToInterfaceOrientation:(UIInterfaceOrientation)interfaceOrientation {
 
-    //this contruction is workaround for issue #1433, when supporting all orientations and holding the device in landscape when starting up results in portrait view size in iOS4 and iOS5
+    //this contruction is workaround for issue #1433, when supporting all orientations and holding the device in landscape when starting up results in portrait view size in iOS4 and iOS5.
     if (firstTime_ && interfaceOrientation == UIInterfaceOrientationPortrait)
     {
         return NO;
