@@ -24,6 +24,7 @@ version 1.1-rc0 ..-..-2012
         ActionTest: added test case for issue #1020, synchronizing of several animations each within a CCRepeatForever
         DirectorTest: test case for demonstrating runLoopCommon with a scroll view
         ParticleTest: added test case for issue #893, free non-moving particles in retina mode would still move
+        Bug914: contains workaround for supporting all orientations on iOS4 and 5 (issue #1433)
 . [NEW] Templates: chipmunk template updated to demonstrate working of CCPhysicsSprite and CCPhysicsDebugNode
 . [NEW] Touches: touches still work when UIKit elements lay on top of cocos view
 . [FIX] Animation:
